force-app/main/default/objects/Product__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <description>Approval of the product by the admin before marking it as active</description>
    <inlineHelpText>Approval of the product by the admin before marking it as active</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AvailableApprovalStatuses</valueSetName>
    </valueSet>
</CustomField>