force-app/main/default/objects/Product__c/fields/DefaultVatRate__c.field-meta.xml
<CustomField>
    <fullName>DefaultVatRate__c</fullName>
    <description>The user can set the default VAT rate for the Product</description>
    <inlineHelpText>The user can set the default VAT rate for the Product</inlineHelpText>
    <label>Default Vat Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VATRates</valueSetName>
    </valueSet>
</CustomField>