force-app/main/default/objects/Product__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Id from an external system to ensure data consistency</description>
    <externalId>true</externalId>
    <inlineHelpText>Id from an external system to ensure data consistency</inlineHelpText>
    <label>External Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>