force-app/main/default/objects/Product__c/validationRules/ArchiveOnlyActiveProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>ArchiveOnlyActiveProduct</fullName>
    <active>true</active>
    <description>User can archive only an active product.</description>
    <errorConditionFormula>not(  ISPICKVAL(PRIORVALUE( Status__c ), &apos;Active&apos;)) &amp;&amp; ISPICKVAL(Status__c,&apos;Archived&apos;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>User can archive only an active product.</errorMessage>
</ValidationRule>