force-app/main/default/objects/Product__c/validationRules/Price_higher_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_higher_than_0</fullName>
    <active>true</active>
    <description>User can only input positive price.</description>
    <errorConditionFormula>Price__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>You can enter olny price which is higher than 0.</errorMessage>
</ValidationRule>