force-app/main/default/objects/Product__c/validationRules/UnacceptedProductCannotBeActive.validationRule-meta.xml
<ValidationRule>
    <fullName>UnacceptedProductCannotBeActive</fullName>
    <active>true</active>
    <description>Before marking product as active, ask admin for Approval.</description>
    <errorConditionFormula>not ISPICKVAL(ApprovalStatus__c, &apos;Accepted&apos;)   &amp;&amp;  ISPICKVAL(Status__c, &apos;Active&apos;)</errorConditionFormula>
    <errorMessage>Before marking product as active - ask admin for Approval using &quot;Submit for Approval&quot; Button</errorMessage>
</ValidationRule>