force-app/main/default/objects/Product__c/listViews/ActiveOnlineProducts.listView-meta.xml
<ListView>
    <fullName>ActiveOnlineProducts</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>DefaultVatRate__c</columns>
    <columns>Status__c</columns>
    <columns>ApprovalStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Online Products</label>
</ListView>