force-app/main/default/objects/Product__c/listViews/Approval_Reviewers_Product.listView-meta.xml
<ListView>
    <fullName>Approval_Reviewers_Product</fullName>
    <filterScope>Queue</filterScope>
    <label>Product Approval Reviewers</label>
    <queue>ProductApprovalReviewers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>