force-app/main/default/objects/Product__c/listViews/DraftOnlineProducts.listView-meta.xml
<ListView>
    <fullName>DraftOnlineProducts</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>DefaultVatRate__c</columns>
    <columns>Status__c</columns>
    <columns>ApprovalStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Online Products</label>
    <sharedTo>
        <role>Admin</role>
        <role>Employee</role>
    </sharedTo>
</ListView>