force-app/main/default/objects/Product__c/listViews/ProductApprovalReviewers_Product.listView-meta.xml
<ListView>
    <fullName>ProductApprovalReviewers_Product</fullName>
    <filterScope>Queue</filterScope>
    <label>Product Approval Reviewers</label>
    <queue>ProductApprovalReviewers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>